--- a/05-efeitos-no-dom/0508-settimeout-e-setinterval/index.html
+++ b/05-efeitos-no-dom/0508-settimeout-e-setinterval/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <style>
-    /* body {
+    body {
       background: blue;
     }
     body.active {
       background: red;
-    } */
+    }
   
   </style>
   <button class="iniciar">Iniciar</button>
